Nu, som jag har sagt några antal gånger. Är jag klar(?)
